<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_top"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".home.dialog.BottomSheetHelp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_drag_handle_24" />

    <TextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Tentang Aplikasi" />

    <TextView
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/tentang_aplikasi_pokemon" />

    <TextView
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingBottom="4dp"
        android:text="Email: sigit_suryono25@hotmail.com" />

    <TextView
        style="@style/TextAppearance.Material3.BodySmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:text="WhatsApp: +62 896-2206-9616" />

    <Button
        android:id="@+id/tutup"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/tutup" />
</LinearLayout>